--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-slick": "^0.31.0",
     "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.22.5",
     "three": "^0.179.1",
     "tsparticles": "^3.9.1",
     "vanta": "^0.5.24"
